<resources>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="app_name">Profiles</string>
    <string name="view_profile">Other Profiles</string>
    <string name="create_profile">Create New Profile</string>
    <string name="profile_name_hint">Name</string>
    <string name="profile_location_hint">Locate Me</string>
    <string name="profile_bio_hint">About me....</string>
    <string name="profile_image_desc">Image Profile</string>
    <string name="locate_me">Locate Me</string>
    <string name="profiles">profiles</string>
    <string name="add">Add</string>
    <string name="name">name</string>
    <string name="location">location</string>
    <string name="bio">bio</string>
    <string name="todo">TODO</string>
    <string name="delete_profile">Delete</string>
    <string name="update">Update</string>
    <string name="login">Login</string>
    <string name="email">email address</string>
    <string name="password">password</string>
    <string name="sign_out">Sign Out</string>
    <string name="register">register</string>
    <string name="menu_profile">Profile</string>
    <string name="parcelable">parcelable</string>
    <string name="menu_profile_all">View Profiles</string>


</resources>
