<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.zik.droplet.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.zik.droplet.ui.LoginProfile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_profile_all"
        android:name="com.example.zik.droplet.ui.AllProfiles.AllProfileFragment"
        android:label="@string/menu_profile_all"
        tools:layout="@layout/fragment_profile_all" />
    <fragment
        android:id="@+id/sign_out"
        android:name="com.example.zik.droplet.ui."
        tools:layout="@layout/user_main"/>

</navigation>