<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg"
    android:orientation="vertical">
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/profile_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorA"
    android:padding="20dp"
    android:layout_margin="20dp">

    <ImageButton
        android:id="@+id/profile_image"
        android:layout_width="158dp"
        android:layout_height="206dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:background="@drawable/layout_bg"
        android:contentDescription="Add Profile Pic"
        android:padding="5dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/profile_view" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="40dp"
        android:background="@drawable/layout_bg"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_image">

        <EditText
            android:id="@+id/profile_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:backgroundTint="@color/Transparent"
            android:hint="@string/name"
            android:padding="10dp" />

        <EditText
            android:id="@+id/profile_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:backgroundTint="@color/Transparent"
            android:hint="@string/email"
            android:padding="10dp" />

        <EditText
            android:id="@+id/profile_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:backgroundTint="@color/Transparent"
            android:hint="@string/password"
            android:padding="10dp" />

        <LinearLayout
            android:id="@+id/id_view"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/profile_location_text"
                android:layout_width="186dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/profile_location_hint"
                android:inputType=""
                android:nextFocusForward="@id/profile_bio"
                android:padding="10dp"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:textFontWeight="10"
                tools:targetApi="p" />

            <ImageButton
                android:id="@+id/locate_me"
                android:layout_width="47dp"
                android:layout_height="43dp"
                android:background="@color/Transparent"
                android:contentDescription="@string/todo"
                android:src="@android:drawable/ic_menu_mylocation" />
        </LinearLayout>

        <EditText
            android:id="@+id/profile_bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/Transparent"
            android:hint="@string/bio"
            android:padding="10dp" />

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:background="@drawable/button_bg"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.293"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

    </Button>


    <TextView
        android:id="@+id/cancel_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:text="@android:string/cancel"
        android:clickable="true"
        app:layout_constraintStart_toEndOf="@id/button"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:backgroundTint="@color/colorPrimaryDark"
        app:srcCompat="@android:drawable/ic_menu_edit"
        tools:layout_editor_absoluteX="255dp"
        tools:layout_editor_absoluteY="-1dp" />
</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>